# oscar-tracker

./: .env.example  .env.production  .gitattributes  .gitignore  .prettierrc  .pylintrc  CLAUDE.md  README.md  alembic.ini  babel.config.js  config.local.example.ps1  env.json  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  requirements-dev.txt  requirements.txt  runservers.ps1  runservers.sh  sitecustomize.py  tsconfig.json  upload.to.server.ps1  upload.to.server.sh  vite.config.mjs
.claude/plans/: OIDC_Implementation.md
alembic/: env.py
alembic/versions/: a2b4b176089f_modernized_sqlalchemy_implementation.py  ae2999b59058_added_key_date_table.py  b085abab72bc_initial_migration.py
backend/: database_routes.py  devserver.py  oscarsEndpoint.py
backend/access_external/: get_links.py
backend/data/: db_connections.py  db_schema.py  derived_values.py  id_creation.py  mutations.py  queries.py  utils.py
backend/data_management/: api_schemas.py  api_validators.py  db_schemas.py  db_validators.py  schemas.py  validators.py
backend/database/: table_categories.csv  table_users.csv  table_users.json
backend/intake/: router.py  schemas.py  title_matching.py  tmdb_enrichment.py
backend/logic/: Flavors.py  Mutations.py  (+6 more)
docs/: nomination-import-format.md
fyi/: moviedb_sample.json  new_rss_debug.xml  rss_debug.xml  sampleRSS.txt  sample_data.json  scrape.txt
public/: logan_homepage.html
scripts/: check-nulls.sh  runservers.ps1  runservers.sh  upload.to.server.sh
src/: App.tsx  main.js  main.tsx  vite-env.d.ts
(+251 files in other folders)
