[tool.poetry]
name = "oscar-tracker"
version = "0.1.0"
description = "Web App to track viewing during awards season"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
flask = "3.1.0"
flask-cors = "5.0.0"
numpy = "2.2.1"
pandas = "2.2.3"
python-dotenv = "1.0.1"
requests = "2.32.3"
pydantic = {extras = ["email"], version = "^2.11.7"}
pandera = "0.22.1"
sqlalchemy = "2.0.37"
gunicorn = "^23.0.0"
lxml = "^6.0.1"
flask-apscheduler = "^1.13.1"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
apscheduler = "^3.11.0"
