[project]
name = "oscar-tracker"
version = "0.1.0"
description = "Web App to track viewing during awards season"

[tool.poetry]
package-mode = false
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "4.12.3"
numpy = "2.2.1"
pandas = "2.2.3"
python-dotenv = "1.0.1"
requests = "2.32.3"
pydantic = {extras = ["email"], version = "^2.11.7"}
pandera = "0.22.1"
sqlalchemy = "2.0.37"
lxml = "^6.0.1"
fastapi = "^0.118.0"
uvicorn = "^0.37.0"
apscheduler = "^3.11.0"
alembic = "^1.17.2"
itsdangerous = "^2.2.0"
httpx = "^0.28.1"
fastapi-simple-oidc = "^0.0.4"
cloudscraper = "^1.2.71"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"

